--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="src/assets/img/logo.png">
+    <link rel="icon" href="src/assets/img/logo.png">
+    <meta name="theme-color" content="#ECE1EC"/>
     <title>FitAura</title>
   </head>
   <body>
