--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" href="src/assets/img/logo.png">
     <link rel="icon" href="src/assets/img/logo.png">
-    <meta name="theme-color" content="#ECE1EC"/>
+    <meta name="theme-color" content="#FFD8E4"/>
     <title>FitAura</title>
   </head>
-  <body>
+  <body class="bg-[url(src/assets/img/background.png)]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
