--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#FFD8E4"/>
     <title>FitAura</title>
   </head>
-  <body class="bg-[url(src/assets/img/background.png)]">
+  <body class="bg-[url(public/background.png)]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
