--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" href="src/assets/img/logo.png">
-    <link rel="icon" href="src/assets/img/logo.png">
+    <link rel="icon" href="/src/assets/img/logo.png">
     <meta name="theme-color" content="#FFD8E4"/>
     <title>FitAura</title>
   </head>
-  <body class="bg-[url('public/background.png')]">
-    <div id="root"></div>
+  <body>
+    <div id="root" class="bg-[url('public/background.png')] bg-cover h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
