--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>FitAura</title>
   </head>
   <body>
-    <div id="root" class="bg-[url('https://storage.googleapis.com/localsteps_temp/background.png')] bg-cover min-h-screen h-fit"></div>
+    <div id="root" class="bg-[url('https://storage.googleapis.com/localsteps_temp/background.png')] bg-cover min-h-screen h-fit overscroll-none"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
